Fix delete icon alignment upon field error

--- a/resources/ext.neowiki/src/assets/scss/global.scss
+++ b/resources/ext.neowiki/src/assets/scss/global.scss
@@ -178,3 +178,9 @@ $background-color-backdrop-light: #6c757dbf;
 		}
 	}
 }
+
+.field-has-error {
+	.delete-button {
+		margin-bottom: 20px;
+	}
+}
